--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^3.1.0",
+    "carbone": "^3.5.6",
+    "docx-templates": "^4.13.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "minio": "^8.0.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/carbone": "^3.2.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
     "@types/swagger-jsdoc": "^6.0.4",
