--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snoop-doc",
   "version": "1.0.0",
-  "description": "",
+  "description": "Документация и генерация документов с использованием Carbone и MinIO",
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
@@ -11,7 +11,14 @@
     "format": "prettier --write ."
   },
   "keywords": [],
-  "author": "",
+  "author": "Developer Team Greenfront",
+  "contributors": [
+    {
+      "name": "Takhanov Almat",
+      "email": "almat.takhanov@bcc.kz",
+      "role": "Developer"
+    }
+  ],
   "license": "ISC",
   "dependencies": {
     "app-root-path": "^3.1.0",
